FIXED for temp dark mode.

--- a/src/main/resources/style/dark-mode.css
+++ b/src/main/resources/style/dark-mode.css
@@ -4,6 +4,7 @@
 
 #text {
     -fx-font-family: "Roboto";
+    -fx-text-fill: #ffffff;
 }
 
 #designPane {
